k8s/qa/nx-react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nx-react-qa
  namespace: qa
spec:
  selector:
    app: nx-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
